<!--
  ~ Copyright (c) linroid 2015.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">PushApp</string>
    <string name="action_settings">设置</string>
    <string name="title_activity_first">@string/app_name</string>
    <string name="btn_scan">扫描二维码</string>
    <string name="title_activity_qrcode">扫描二维码</string>
    <string name="action_torch_off">打开闪光灯</string>
    <string name="action_torch_on">关闭闪光灯</string>
    <string name="title_choose_app">选择一个App打开</string>
    <string name="title_activity_select_device">选择设备</string>
    <string name="msg_scanner">请在电脑上打开 %s</string>
    <string name="title_activity_bind">绑定设备</string>

    <string name="hello_world">Hello world!</string>
    <string name="label_set_device_alias">设置设备别名:</string>
    <string name="btn_bind">绑定</string>
    <string name="tpl_alias_default" formatted="false" >%s(%s)</string>
    <string name="msg_dialog_bind">绑定中…</string>
    <string name="msg_scan_auth_success">扫描成功!</string>
    <string name="bind_fist_content">请在电脑上打开:\n\n%s/device/bind</string>
    <string name="error_unknown_barcode">无法识别二维码信息:(</string>
    <string name="msg_downloading">正在下载中…</string>
    <string name="msg_download_title" formatted="false">%s %s</string>
    <string name="msg_download_complete">下载完成 点击安装</string>
    <string name="msg_download_progress">%d%%</string>
    <string name="msg_download_failed" >下载失败</string>
    <string name="title_auto_install_confirm_dialog">自动安装</string>
    <string name="msg_auto_install_confirm_dialog">"打开后，会在安装包下载完成后自动帮您安装
无需手动点击</string>
    <string name="msg_auto_install_confirm_cancel" >你也可以在设置里打开哟~</string>
    <string name="loading_text">加载中…</string>
    <string name="action_install">安装</string>
    <string name="action_uninstall">卸载</string>
    <string name="action_send_to_others">发给其他设备</string>
    <string name="action_download">下载&amp;安装</string>
    <string name="action_open">打开</string>
    <string name="btn_dialog_copy">复制到剪切板</string>
    <string name="title_dialog_unsupport_qrcode">二维码信息</string>
    <string name="txt_device_model" formatted="false">型号: %s</string>
    <string name="txt_device_system" formatted="false">系统: %s(API %s)</string>
    <string name="txt_device_cpu_type" formatted="false">CPU: %s</string>
    <string name="txt_device_screen" formatted="false">屏幕: %dx%d(%ddpi)</string>
    <string name="txt_device_memory_size" formatted="false">内存: %s</string>
    <string name="error_not_select_any_device">请至少一台设备</string>
    <string name="msg_push_install_package">正在向%d台设备推送安装…</string>
    <string name="msg_push_success">推送成功!</string>
    <string name="msg_upload_progress" formatted="false">上传中…(%s/%s)</string>
    <string name="msg_upload_prepare">准备上传中…</string>
    <string name="msg_install_complete">安装完成 点击打开</string>
    <string name="msg_upload_complete">请稍等…</string>
    <string name="txt_auth_time">授权时间: %s</string>
    <string name="msg_dialog_content_revoke">收回后,%s将无法再向本设备安装应用</string>
    <string name="msg_dialog_title_revoke">确定要收回吗？</string>
    <string name="msg_auth_snack">授权中…</string>
    <string name="msg_auth_success">授权给%s安装权限成功!</string>

    <!--设置-->
    <string name="pref_bind_account">bind_account</string>
    <string name="pref_auto_install">auto_install</string>
    <string name="pref_auto_open">auto_open</string>
    <string name="pref_about_us">about_us</string>
    <string name="pref_accessibility_service">accessibility_service</string>


    <string name="action_app_info">应用信息</string>
    <string name="toast_start_download">%s 开始下载…</string>
    <string name="toast_download_complete">%s 下载完成</string>
    <string name="toast_start_install">%s 下载完成,开始安装</string>
    <string name="toast_download_failed">%s 下载失败</string>
    <string name="action_qrcode">设备二维码</string>
    <string name="title_activity_about">AboutActivity</string>

    <!-- About -->
    <string name="about_app_name_with_introduce">PushApp，自动化安装与测试</string>
    <string name="about_introduce">我们有一个愿想\n帮助开发和测试人员\n从重复安装软件的体力劳动中解放出来\n乃至于自动化测试、自动化报告生成\nPushApp是一个开始\n一起走向远方</string>
    <string name="about_introduce_and_help">介绍</string>
    <string name="about_developers">开发人员</string>
    <string name="about_open_source_license">致敬</string>
    <string name="about_open_source_libraries_list">LiteOrm\nheadsupcompat\ncom.android.support:appcompat-v7:22.2.1\ncom.android.support:recyclerview-v7:22.2.1\ncom.squareup.picasso:picasso:2.5.2\ncom.android.support:design:22.2.1\ncom.github.chrisbanes.photoview:library:1.2.3\ncom.daimajia.numberprogressbar:library:1.2@aar\ncom.umeng.analytics:analytics:latest.integration\ncom.squareup.retrofit:retrofit:1.9.0\nio.reactivex:rxandroid:1.0.0\ncom.squareup.okhttp:okhttp-urlconnection:2.0.0\ncom.squareup.okhttp:okhttp:2.0.0\ncom.jakewharton:butterknife:7.0.1\ncom.squareup:otto:1.3.8\ncom.github.bumptech.glide:glide:3.6.1"</string>
    <string name="about_share">分享我们的App</string>
    <string name="about_share_text">发现了一款方便移动开发测试的App，一键安装App到多个设备，推荐你也来看看~ http://pushapp.linroid.com</string>
    <string name="about_share_action">分享</string>

    <string name="toast_get_device_token_failed">获取失败</string>
    <string name="txt_device_token_url" formatted="false">%s/qrcode/device/%s</string>
    <string name="title_device_qrcode">设备二维码</string>
    <string name="msg_qrcode_type_require_device">请扫描设备二维码!</string>
    <string name="error_unauthorized">授权已过期,请重新绑定</string>
    <string name="txt_device_token_introduce">选中安装包，然后扫描二维码\n即可发送到这台设备，十分钟内有效。</string>
    <string name="msg_revoke_success">成功收回%s的安装权限!</string>
    <string name="msg_revoke_progress">正在收回…</string>
    <string name="btn_revoke_recall">撤回</string>
    <string name="msg_recall_revoke_progress">撤销中…</string>
    <string name="txt_scan_auth">扫描其他帐号的二维码进行授权</string>
    <string name="txt_scan_device">扫描其他设备的二维码发送安装包</string>
    <string name="txt_scan_bind">请在电脑上打开 %s/device/bind</string>
    <string name="title_fragment_push">推送</string>
    <string name="title_fragment_app">已安装</string>
    <string name="title_fragment_auth">授权</string>
    <string name="action_replace_install">切换到这个版本</string>
    <string name="title_logout_account">注销 %s?</string>
    <string name="msg_logout_account">如果只是想其他账号可以向这台手机安装应用，可以选择授权其他用户</string>
    <string name="txt_emoji_unhappy">:(</string>
    <string name="empty_auth_message">扫描其他账户二维码，即可授予其安装权限哟</string>
    <string name="empty_pack_message">没有收到过哦，还不去试一下!</string>
    <string name="loading_error_text">出现错误—</string>
    <string name="btn_error_retry">刷新试试</string>
    <string name="btn_empty_retry">刷新试试</string>
    <string name="empty_message">什么也没有</string>
    <string name="empty_auth_device">还没有绑定任何设备～</string>
    <string name="txt_about_version">Version %s</string>
    <string name="msg_new_version">发现新版本:%s记得更新哟</string>
    <string name="once_version">version_%d</string>
    <string name="btn_update_version">查看</string>
</resources>
