<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) linroid 2015.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/action_open" android:id="@+id/action_open"/>
    <item android:title="@string/action_download" android:id="@+id/action_download" android:visible="false"/>
    <item android:title="@string/action_install" android:id="@+id/action_install"/>
    <!--<item android:title="@string/action_replace_install" android:id="@+id/action_replace_install" android:visible="false"/>-->
    <item android:title="@string/action_app_info" android:id="@+id/action_app_info"/>
    <item android:title="@string/action_uninstall" android:id="@+id/action_uninstall"/>
    <item android:title="@string/action_send_to_others" android:id="@+id/action_send_package"/>
    <item android:title="@android:string/cancel" android:id="@+id/action_cancel"/>
</menu>