<!--
  ~ Copyright (c) linroid 2015.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <PreferenceCategory android:title="基本设置">
        <Preference
            android:key="@string/pref_bind_account"
            android:title="绑定账户"
            tools:summary="你是个好人啦" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_auto_install"
            android:title="下载后安装" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_auto_open"
            android:title="安装后打开" />
        <Preference
            android:key="@string/pref_accessibility_service"
            android:title="自动安装服务"
            android:summary="帮你自动点击安装界面的“安装”按钮，解放你的双手，请确保该服务处于开启状态。"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="关于">
        <Preference
            android:key="@string/pref_about_us"
            android:summary="你想知道的一切"
            android:title="关于我们" />
    </PreferenceCategory>

</PreferenceScreen>
