<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/about_header_height"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@style/CollapsingToolbarTitleStyle"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/about_header_height"
                android:background="@drawable/bg_about_header"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_marginTop="24dp"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/about_app_name_with_introduce"
                    android:textColor="@color/md_white_1000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/md_white_1000"
                    android:textSize="14sp" />
            </LinearLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/about_card_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/about_introduce_and_help"
                android:textColor="@color/md_grey_600" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_card_nopic"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:text="@string/about_introduce"
                    android:textColor="@color/md_grey_800"
                    android:textIsSelectable="true"
                    android:textSize="14sp" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="12dp"
                android:background="@color/md_grey_500" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="12dp"
                android:text="@string/about_developers"
                android:textColor="@color/md_grey_600" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_card_nopic">

                <ImageView
                    android:id="@+id/ig_avatar_linroid"
                    android:layout_width="@dimen/about_avatar_size"
                    android:layout_height="@dimen/about_avatar_size"
                    android:layout_margin="16dp"
                    android:src="@mipmap/avatar_linroid" />

                <TextView
                    android:id="@+id/tv_linroid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/ig_avatar_linroid"
                    android:layout_toEndOf="@id/ig_avatar_linroid"
                    android:layout_toRightOf="@id/ig_avatar_linroid"
                    android:text="linroid"
                    android:textColor="@color/md_grey_800"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_linroid"
                    android:layout_toEndOf="@id/ig_avatar_linroid"
                    android:layout_toRightOf="@id/ig_avatar_linroid"
                    android:text="Android主开发 &amp; Web前端 &amp; 服务端"
                    android:textColor="@color/md_grey_600" />

                <ImageView
                    android:id="@+id/ig_avatar_2bab"
                    android:layout_width="@dimen/about_avatar_size"
                    android:layout_height="@dimen/about_avatar_size"
                    android:layout_below="@id/ig_avatar_linroid"
                    android:layout_margin="16dp"
                    android:src="@mipmap/avatar_2bab" />

                <TextView
                    android:id="@+id/tv_2bab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/ig_avatar_2bab"
                    android:layout_toEndOf="@id/ig_avatar_2bab"
                    android:layout_toRightOf="@id/ig_avatar_2bab"
                    android:text="2BAB"
                    android:textColor="@color/md_grey_800"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_2bab"
                    android:layout_toRightOf="@id/ig_avatar_2bab"
                    android:paddingBottom="16dp"
                    android:text="Android后勤开发 &amp; icon设计"
                    android:textColor="@color/md_grey_600" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="12dp"
                android:background="@color/md_grey_500" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="12dp"
                android:text="@string/about_open_source_license"
                android:textColor="@color/md_grey_600" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_card_nopic"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_open_source_libraries_list"
                    android:textColor="@color/md_grey_600"
                    android:textSize="@dimen/about_open_source_lis_text_size"
                    tools:ignore="HardcodedText" />

            </RelativeLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>